# realisim2

./: .gitIgnore  CMakeLists.txt  README.md  Todo.txt
CMakeModules/: AddComponent.cmake  AddFiles.cmake  (+11 more)
Common/3d/: CMakeLists.txt  Camera.cpp  Camera.cpp.bak  Camera.h  Camera.h.bak  Material.cpp  Material.h  Projection.cpp  Projection.cpp.bak  Projection.h  Viewport.cpp  Viewport.cpp.bak  Viewport.h
Common/3d/Loader/: ObjLoader.cpp  ObjLoader.h
Common/3d/Scene/: IPositionableNode.cpp  IPositionableNode.h  SceneNode.cpp  SceneNode.h
Common/Core/: ByteArray.cpp  ByteArray.h  CMakeLists.txt  Color.cpp  Color.h  DateTime.cpp  DateTime.h  FileInfo.h  Image.cpp  Image.h  ImageInternalFormat.cpp  Logger.cpp  Logger.h  MessageQueue.cpp  MessageQueue.h  MultiClientsMessageQueue.cpp  MultiClientsMessageQueue.h  MultiClientsMultiMessageQueues.cpp  MultiClientsMultiMessageQueues.h  Path.h  Statistics.cpp  Statistics.h  StatisticsTree.cpp  StatisticsTree.h  StreamUtility.cpp  StreamUtility.h  StringUtilities.cpp  StringUtilities.h  Timer.cpp  Timer.h  Unused.h
Common/Core/ImageSupport/: HgtImage.cpp  HgtImage.h  IImageReader.cpp  IImageReader.h  ImageBufferHelpers.cpp  ImageBufferHelpers.h  ImageInternalFormat.h  PngImage.cpp  PngImage.h  RawImage.cpp  RawImage.h  RgbImage.cpp  RgbImage.h  TgaImage.cpp  TgaImage.h
Common/Core/UnitTests/: ByteArrayTest.cpp  CMakeLists.txt  ColorRgbTest.cpp  ColorTest.cpp  DateTimeTest.cpp  HgtImageTest.cpp  ImageTest.cpp  LoggerTest.cpp  MessageQueueTest.cpp  MultiClientsMessageQueueTest.cpp  MultiClientsMultiMessageQueuesTest.cpp  StatisticsTest.cpp  StatisticsTreeTest.cpp  StreamUtilityTest.cpp  StringUtilities.cpp  TimerTest.cpp
Common/Core/UnitTests/assets/: RF16_gradient.raw  dices.rgb  dices.tga
Common/Core/UnitTests/mac/: FileInfoTest.cpp
Common/Core/UnitTests/windows/: FileInfoTest.cpp
Common/Core/mac/: FileInfo.cpp  Path.cpp
Common/Core/windows/: FileInfo.cpp  Path.cpp
Common/Geometry/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  CMakeLists.txt  Frustum.cpp  Frustum.h  GeometricGrid.cpp  GeometricGrid.h  Intersections.cpp  Intersections.h  Line.cpp  Line.h  LineSegment.h  Mesh.cpp  Mesh.h  OctreeOfMeshFaces.cpp  OctreeOfMeshFaces.h  Plane.cpp  Plane.h  PlatonicSolid.cpp  PlatonicSolid.h  Rectangle.cpp  Rectangle.h  RectangularPrism.cpp  RectangularPrism.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  Utilities.cpp  Utilities.h
Common/Geometry/Loader/: ObjLoader.cpp  ObjLoader.h
Common/Geometry/UnitTests/: CMakeLists.txt  FrustumTest.cpp  IntersectionsTest.cpp  OctreeOfMeshFacesTest.cpp  RectangleTest.cpp  RectangularPrismTest.cpp  SphereTest.cpp  TriangleTest.cpp
Common/Interface/: CMakeLists.txt  Key.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
Common/Interface/Audio/: AudioInterface.cpp  AudioInterface.h  Utilities.cpp  Utilities.h  Wave.cpp  Wave.h
Common/Math/UnitTest/: CMakeLists.txt  Index2Test.cpp  Index3Test.cpp  Matrix4Test.cpp  Matrix4Test.cpp.bak  QuaternionTest.cpp  UnitTest.cpp  Vector2Test.cpp  Vector3Test.cpp  Vector4Test.cpp
Common/Math/UnitTests/: CMakeLists.txt  HalfFloatTests.cpp  Matrix4Test.cpp  QuaternionTest.cpp  Vector2Test.cpp  Vector2iTest.cpp  Vector3Test.cpp  Vector3iTest.cpp  Vector4Test.cpp  common_mathTest.cpp
Common/Utilities/UnitTests/: ByteArrayTest.cpp  CMakeLists.txt  StatisticsTest.cpp  StringUtilities.cpp  TimerTest.cpp
Projects/LightBeam/: Broker.cpp  Broker.h  CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.h  MainWindow.cpp  MainWindow.h  Raytracer.cpp  Raytracer.h  SimpleIntegrator.cpp  SimpleIntegrator.h  Utilities.cpp  Utilities.h  View.cpp  View.h  VisibilityTester.cpp  VisibilityTester.h  main.cpp
Projects/LightBeam/DataStructure/: GeometryNodes.cpp  ImageCells.cpp  ImageCells.h  Interfaces.cpp  Interfaces.h  IntersectionResult.cpp  IntersectionResult.h  Light.cpp  Light.h  Material.cpp  Material.h  Scene.cpp  Scene.h
Projects/LightBeam/DataStructure/Scene/: GeometryNodes.cpp  GeometryNodes.h  IRenderable.cpp  IRenderable.h  Interfaces.cpp  Interfaces.h  LightNode.cpp  LightNode.h  MaterialNode.cpp  MaterialNode.h  Scene.cpp  Scene.h
Projects/Reactor/: Broker.cpp  Broker.h  CMakeLists.txt  Engine.cpp  Engine.h  Hub.cpp  Hub.h  todo.txt
Projects/Reactor/Assets/Shaders/: Blur2d.frag  CompositingPass.frag  CompositingPass.vert  ContourHighlightPass_drawContour.frag  ContourHighlightPass_drawContour.vert  ContourHighlightPass_drawSelectedModels.frag  ContourHighlightPass_drawSelectedModels.vert  GlowPass.frag  GlowPass.vert  PickingPass.frag  model.vert  modelWithMaterial.frag  screenBlitPass.frag
Projects/Reactor/DataStructures/Scene/: ImageNode.cpp  ImageNode.h  MaterialNode.cpp  MaterialNode.h  ModelNode.cpp  ModelNode.h  Scene.cpp  Scene.h  SceneNodeEnum.h
Projects/Reactor/Systems/: CameraController.cpp  CameraController.h  ISystem.h
Projects/Reactor/Systems/Renderer/: IRenderable.h  ModelRenderable.cpp  ModelRenderable.h  Renderer.cpp  Renderer.h  TextureRenderable.cpp  TextureRenderable.h
Prototypes/Camera/: CMakeLists.txt  MainWindow.cpp  MainWindow.cpp.bak  MainWindow.h  main.cpp
Prototypes/FrameBuffer/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
Prototypes/FrameBuffer/assets/: bloom.frag  compositing.frag  compositing.vert
Prototypes/Math/: CMakeLists.txt  main.cpp
Prototypes/Reactor-Engine/: CMakeLists.txt  GlWindow.cpp  GlWindow.h  MainWindow.cpp  MainWindow.h  main.cpp
Prototypes/Reflection2/: CMakeLists.txt  DebugWriter.cpp  DebugWriter.h  DummyStruct.cpp  DummyStruct.h  IReflectable.cpp  IReflectable.h  ReadMe.txt  main.cpp
Prototypes/Shader/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
Prototypes/Shader/assets/: lightPerPixel.frag  lightPerPixel.vert  lightPerVertex.frag  lightPerVertex.vert
Prototypes/SoundTest/: CMakeLists.txt  MainDialog.cpp  MainDialog.h
Prototypes/TestGl/: CMakeLists.txt  MainDialog.cpp  MainDialog.h
Prototypes/textureUnwrap/: CMakeLists.txt  TextureUnwrapper.cpp  TextureUnwrapper.h  main.cpp
Prototypes/treeD/: CMakeLists.txt  MainDialog.h  MainWindow.cpp  MainWindow.h
(+129 files in other folders)
