
PROJECT(Math)

#output apps in bin/"BuildConfiguration"/${PROJECT_NAME}
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${PROJECT_NAME})

SET( SOURCE_FILES ${SOURCE_FILES} CMakeLists.txt )
ADD_COMPONENT( "." "application")
ADD_COMPONENT( "../../Common/Math" "Math")

# create executable
ADD_EXECUTABLE( ${PROJECT_NAME} ${SOURCE_FILES} ${INCLUDE_FILES} )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} )

