
PROJECT(TestGL)

#output apps in bin/"BuildConfiguration"/${PROJECT_NAME}
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib/${PROJECT_NAME})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib/${PROJECT_NAME})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${PROJECT_NAME})

SET( SOURCE_FILES ${SOURCE_FILES} CMakeLists.txt )
ADD_COMPONENT( "./" "application")

QT_AUTOMOC()

# create executable
ADD_EXECUTABLE( ${PROJECT_NAME} ${SOURCE_FILES} ${INCLUDE_FILES} )
TARGET_LINK_LIBRARIES( ${PROJECT_NAME} Qt5::Widgets Qt5::OpenGL)

